--- a/.github/workflows/config_push_preview.yml
+++ b/.github/workflows/config_push_preview.yml
@@ -1,5 +1,5 @@
 # This workflow will be triggered on every PR on the main branch
-# Note : if an XML file is not present, the job is canceled
+# Note : if the metainfo.prop file is not present, the job is canceled
 
 # To get started, configure the following in your repos secrets https://docs.github.com/en/actions/security-guides/encrypted-secrets
 # SOLACE_CLOUD_TOKEN: Solace Cloud Token
@@ -25,28 +25,28 @@ jobs:
         uses: tj-actions/changed-files@v40
         with:
           files: | 
-            src/main/mule/**.xml
+            metainfo.prop
       
-      - name: Read Mule XML content
-        id: mule_xml
+      - name: Read metainfo.prop content
+        id: metainfo
         run: |
           for file in ${{ steps.changed-markdown-files.outputs.all_changed_files }}; do
             if [[ ${file} != *"Global"* ]];then
               echo "Reading file: $file"
-              echo 'xml<<EOF' >> $GITHUB_OUTPUT
+              echo 'metadata<<EOF' >> $GITHUB_OUTPUT
               echo $(cat $file) >> $GITHUB_OUTPUT
               echo 'EOF' >> $GITHUB_OUTPUT
             fi
           done
       
-      - name: Extract Application Version ID from Mule config
-        if: ${{ steps.mule_xml.outputs.xml }}
+      - name: Extract Application Version ID from metainfo.prop
+        if: ${{ steps.metainfo.outputs.metadata }}
         uses: tmelliottjr/extract-regex-action@v1.4.0
         id: epApplicationVersionId
         with:
-          regex: '(?<=name=\"epApplicationVersionId\" value=\")(.*?)(?=\")' 
+          regex: '(?<=applicationVersionID=)(?!.*=).*' 
           flags: "gm"
-          input: ${{steps.mule_xml.outputs.xml}}
+          input: ${{steps.metainfo.outputs.metadata}}
 
       - name: Generate Preview Application Version Deployment Plan
         if: ${{ steps.epApplicationVersionId.outputs.resultString }}
